--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <section id="contact" class="container">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:noma22204341032@diu.edu.bd">noma22204341032@diu.edu.bd</a></p>
-        <p>Phone: 01980234553</p>
+        <p>Email: <a href="mailto:noma22204341032@diu.edu.bd">n**********@diu.edu.bd</a></p>
+        <p>Phone: 019********</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/fariha-noma-469112266/" target="_blank">My LinkedIn</a></p>
         <p>GitHub: <a href="https://github.com/FarihaNoma" target="_blank">My GitHub</a></p>
     </section>
